- "square" command and square() function: don't skip dummy
  variables when computing cross-products
- xmax() and xmin() functions; consolidate with max, min but
  retain the "x" variants as aliases until further notice
- Fix possible incorrect behavior of "smpl" in some special
  cases (inside a function, when the dataset is sub-sampled at
  the caller level)
- Avoid false positives in detecting markdown in help text for
  function packages
- Windows10 theme: fix invisibility of some GUI elements
- recent macOS: fix crash on trying to open PDF viewer to a
  specific chapter of the User's Guide
- dbnomics addon: don't fail on database IDs that contain '@'
  (as some OECD identifiers now do)
- gretl_edit: use a scrollable window when displaying stderr
  output, so it doesn't get truncated
- When adding a 1x1 matrix to a bundle via defbundle() or _()
  don't automatically convert it to a scalar

2024-10-21 version 2024c
- Random number generation: add Dirichlet and generic discrete
  distributions
- "summary" command with --by option: provide a $result matrix
  if the list argument contains a single series, and improve
  the format of the printout
- "corr" command: be more explicit about the sample(s) used
- "rename" command: add a --case option to support case
  conversion of all series names in the dataset
- "reset" command: add a --robust option and scale the squares
  and cubes of the fitted values to avoid numerical instability
- flatten() function: add an extra (vec-wise) mode for matrices
- matrix "left division" operator: improve efficiency when the
  left-hand operand is triangular
- Fix bug: append via console not updating series list in the
  main gretl window
- Fix bug: console command-line broken following use of "printf"
  with no newline in the format
- Fix bug in "corrgm" command: spurious significance stars shown
  for the PACF when the --bartlett option is given
- Fix bug in "adf" command (without the --gls option): error if