@@ -6848,7 +6848,7 @@ static int object_get_size (NODE *n, parser *p)
     } else if (n->t == LIST) {
         ret = n->v.ivec[0];
     } else if (n->t == STR) {
-        ret = g_utf8_strlen(n->v.str, -1);
+        ret = strlen(n->v.str);
     } else {
         p->err = e_types(n);
     }
